--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.4.4",
+    "tailwindcss-scoped-groups": "^2.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
